--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,20 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
+    "cogo-toast": "^4.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
+    "react-inner-image-zoom": "^2.0.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-transition": "^2.1.0",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "react-toastify": "^7.0.4",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
