--- a/server/composer.json
+++ b/server/composer.json
@@ -11,6 +11,7 @@
         "laravel/fortify": "^1.17",
         "laravel/framework": "^8.75",
         "laravel/jetstream": "^2.9",
+        "laravel/passport": "10.3",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.5"
