--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,9 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0"
+    },
+    "dependencies": {
+        "@googlemaps/react-wrapper": "^1.1.23",
+        "react-google-maps": "^9.4.5"
     }
 }
